fix: support custom flexible bill periods
